--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<div class="fruitContainer" cdkDropList (cdkDropListDropped)="drop($event)">
+<div class="fruitContainer" 
+     cdkDropList 
+     [cdkDropListData]="fruits" 
+     (cdkDropListDropped)="drop($event)">
   <div class="itemBox1" *ngFor="let item of fruits" cdkDrag>{{ item }}</div>
-
-
 </div>
 
-
-
-
-<div class="storageBox" cdkDropList (cdkDropListDropped)="drop($event)">
+<div class="storageBox" 
+     cdkDropList 
+     [cdkDropListData]="storageBox" 
+     (cdkDropListDropped)="drop($event)">
   <div class="itemBox2" *ngFor="let storageBoxItem of storageBox" cdkDrag>{{ storageBoxItem }}</div>
 </div>
